fix(widget): resolve cropped  right chevron in carousel

--- a/widget/src/components/messages/CarouselMessage.scss
+++ b/widget/src/components/messages/CarouselMessage.scss
@@ -1,7 +1,7 @@
 .sc-message--carousel {
   border-radius: 0.5rem;
   position: relative;
-  width: 275px;
+  width: 100%;
   overflow: hidden;
 
   .sc-message--carousel-inner {
